--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,9 +1,28 @@
 .card {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 20em;
-    height: 20em;
+    background-color: white;
+    box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.432);
     margin: 1em;
-    background-color: gray;
+    transition: transform 0.3s;
+}
+
+.card-image {
+    width: 100%;
+    margin-bottom: 1em;
+}
+
+.card-title {
+    margin: 1em;
+    color: black;
+}
+
+.card-caption {
+    color: rgb(92, 149, 86);
+}
+
+.card:hover {
+    transform: scale(1.1, 1.1);
 }
