--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,6 +3,8 @@ nav {
     justify-content: space-around;
     align-items: center;
     background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgb(0, 0, 0) 100%);
+    height: 7em;
+    margin-bottom: 2em;
 }
 
 nav ul {
@@ -13,20 +15,23 @@ nav ul {
     padding: 0;
 }
 
-nav ul li {
+nav li {
     list-style: none;
     font-size: 20pt;
-    padding:2em;
     transition: background-color 0.5s;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
-nav ul li a {
+nav a {
     text-decoration: none;
     color: white;
+    padding: 2em;
+    transition: background-color 0.2s;
 }
 
-nav ul li:hover {
-    background-color: rgba(0, 0, 0, 0.219);
+nav a:hover {
+    background-color: rgba(132, 255, 138, 0.219);
 }
 
 .nav-title {
@@ -44,4 +49,5 @@ nav ul li:hover {
     background-size: cover;
     position: relative;
     min-height: 100vh;
+    background-attachment: fixed;
 }
