--- a/src/components/card.css
+++ b/src/components/card.css
@@ -12,6 +12,9 @@
 .card-image {
     width: 100%;
     margin-bottom: 1em;
+    height: 20em;
+    overflow: hidden;
+    object-fit: cover;
 }
 
 .card-title {
