updated blog and added rationale

--- a/src/css/demo.css
+++ b/src/css/demo.css
@@ -43,7 +43,7 @@
 }
 
 .predictionColumn {
-    background-color: rgb(232, 240, 255);
+    /* background-color: rgb(232, 240, 255); */
     padding: 3em;
     width: 16em;
     /* outline: 10px solid rgba(52, 143, 200, 0.555); */
