--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -52,3 +52,24 @@ nav a:hover {
     background-attachment: fixed;
     padding-bottom: 5em;
 }
+
+@media only screen and (max-width: 600px) {
+    .nav-title {
+        float: none;
+    }
+    nav{
+        flex-direction: column;
+        height: fit-content;
+        margin-top: 1em;
+    }
+    nav ul {
+        flex-direction: column;
+        padding-top: 1em;
+    }
+    nav li {
+        margin: 1em;
+    }
+    nav a {
+        padding: 1em;
+    }
+}
