--- a/src/css/post.css
+++ b/src/css/post.css
@@ -47,7 +47,7 @@
     padding-top: 0em;
     padding-left: 8em;
     padding-right: 8em;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
     text-align: left;
     font-size: 15pt;
     line-height: 2em;
@@ -70,9 +70,21 @@ p q:hover {
     padding-top: 3em;
     padding-bottom: 3em;
     max-width: 50em;
-    font-size: 14pt;
+    font-size: 15pt;
+    line-height: 2em;
 }
 
 .left-container li {
     margin-bottom: 1em;
+}
+
+@media only screen and (max-width: 600px) {
+    .post-body {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+    .left-container {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
 }
