--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,10 +1,15 @@
 .about {
-    background-color: rgba(255, 255, 255, 0.9);
-    height: 10em;
+    background-color: rgba(255, 255, 255, 0.95);
     margin: 2em;
     margin-right: auto;
     margin-left: auto;
     max-width: 80em;
     color: black;
     padding: 1em;
+    box-shadow: 5px 5px 10px black;
+}
+
+.about-pic {
+    max-width: 20em;
+    margin-top: 2em;
 }
