--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -43,7 +43,7 @@ nav a:hover {
 }
 
 .bg {
-    background-image: url(../images/bg.png);
+    background-image: url(../images/bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
