--- a/src/css/post.css
+++ b/src/css/post.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     max-width: 70em;
     margin-right: auto;
     margin-left: auto;
