--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,5 +1,6 @@
 .about {
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(5px);
     margin: 2em;
     margin-right: auto;
     margin-left: auto;
