final css adjustments

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,6 +1,5 @@
 .about {
-    background-color: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 1);
     margin: 2em;
     margin-right: auto;
     margin-left: auto;
@@ -13,4 +12,11 @@
 .about-pic {
     max-width: 20em;
     margin-top: 2em;
+}
+
+@media only screen and (max-width: 400px) {
+    .about-pic {
+        width: 15em;
+    }
+
 }
