--- a/src/css/card.css
+++ b/src/css/card.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20em;
+    width: 22em;
     background-color: white;
     box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.432);
     margin: 1em;
@@ -28,4 +28,10 @@
 
 .card:hover {
     transform: scale(1.1, 1.1);
+}
+
+@media only screen and (max-width: 400px) {
+    .card {
+        width: 90%;
+    }
 }
